--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
 	<body>
 		Ovo je moja prva         stranica.
 		<h1>Gimnazija</h1>
-		<h2>opæa</h2>
+		<h2>opÃ¦a</h2>
 		<h3>1.A</h3>
 		<h3>1.B</h3>
 		<h1>Slap</h1>
 		<p>
-		    Teèe i teèe, teèe jedan slap;
-		    <br>Što u njem znaèi moja mala kap?
+		    TeÃ¨e i tece, tece jedan slap;
+		    <br>Å to u njem znaci moja mala kap?
 		</p>
 		<p>
 		    Gle, jedna duga u vodi se stvara,
-            <br>I sja i dršæe u hiljadu šara.
+            <br>I sja i drsce u hiljadu sara.
 
 		</p>
 		<p>
 		    Taj san u slapu da bi mogo sjati,
-            <br>I moja kaplja pomaže ga tkati.
+            <br>I moja kaplja pomaÅ¾e ga tkati.
 
 		</p>
 		<ol>
@@ -31,7 +31,7 @@
 
 		</ol>
 		<ul>
-		    <li>Lovac u žitu</li>
+		    <li>Lovac u Å¾itu</li>
 		    <li>Ubiti pticu rugalicu</li>
 		    <li>Prijan Lovro</li>
 
