--- a/index.html
+++ b/index.html
@@ -42,12 +42,40 @@
 	    <tr>
             <td colspan=2>1</td>
             <td>2</td>
-            <td>3</td>
 	    </tr>
 	    <tr>
 	        <td>4</td>
 	        <td>5</td>
 	        <td>6</td>
+	    </tr>
+	</table>
+	<table border = "1">
+	    <tr>
+            <td>1</td>
+            <td>2</td>
+	    <td rowspan=2>3</td>
+	    </tr>
+	    <tr>
+	        <td>4</td>
+	        <td>5</td>
+	    </tr>
+	</table
+		<table border = "1">
+		<th colspan=2>Ime i prezime</th>
+		<th>Rođen</th>
+	    <tr>
+            	<td>Marko</td>
+            	<td>Zec</td>
+		<td>1981.</td></td>
+	    </tr>
+	    <tr>
+	        <td>Ivan</td>
+	        <td rowspan=2>Horvat</td>
+	        <td>1984.</td>
+	    </tr>
+	    <tr>
+		<td>Hrvoje</td>
+		<td>1970.</td>
 	    </tr>
 	</table>
 </html>
