--- a/index.html
+++ b/index.html
@@ -79,5 +79,13 @@
 	    </tr>
 	</table>
 	<img src ="jabuka.jpg">
+	</img>
+	<img src ="krumpir.jpg">
+	</img>	
+	<img src ="kruška.jpg">
+	</img>	
+	<img src ="lopta.jpg">
+	</img>	
+	<img src ="skola.jpg">
 	</img>	
 </html>
