--- a/index.html
+++ b/index.html
@@ -1,91 +1,154 @@
+
 <html>
-	<head>
-		<title>Moja stranica</title>
-	</head>
-	<body>
-		Ovo je moja prva         stranica.
-		<h1>Gimnazija</h1>
-		<h2>opæa</h2>
-		<h3>1.A</h3>
-		<h3>1.B</h3>
-		<h1>Slap</h1>
-		<p>
-		    Teèe i tece, tece jedan slap;
-		    <br>Što u njem znaci moja mala kap?
-		</p>
-		<p>
-		    Gle, jedna duga u vodi se stvara,
-            <br>I sja i drsce u hiljadu sara.
+    <head>
+            <title> Moja stranica </title>
+	    <meta charset="UTF-8">
+    </head>
 
-		</p>
-		<p>
-		    Taj san u slapu da bi mogo sjati,
-            <br>I moja kaplja pomaže ga tkati.
+    <body>
+            Ovo je  <b> moj </b>  tekst. Ponekad je malo <i> ukošen </i> , a ponekad<b> podebljan</b> . Poželim li to, mogu ga, primjerice, uèinii istovremeno i <b> podebljanim</b> i <i> ukošenim </i>
+            <map name='ime_mape'>
+	    <
+                <area shape='rect' coords='0,0,100,100' href='adresa linka'>
+                <area shape='rect' coords='100,0,200,100' href='adresa linka'>
+                <area shape='rect' coords='0,100,100,200' href='adresa linka'>
+                <area shape='rect' coords='100,100,200,200' href='adresa linka'>
 
-		</p>
-		<ol>
-		    <li>Matrix</li>
-		    <li>Lord of the Rings</li>
-		    <li>Green Book</li>
-		    <li>Harry Potter</li>
 
-		</ol>
-		<ul>
-		    <li>Lovac u žitu</li>
-		    <li>Ubiti pticu rugalicu</li>
-		    <li>Prijan Lovro</li>
+            </map>
 
-		</ul>
+    </body>
 
-	</body>
-	<table border = "1">
-	    <tr>
-            <td colspan=2>1</td>
-            <td>2</td>
-	    </tr>
-	    <tr>
-	        <td>4</td>
-	        <td>5</td>
-	        <td>6</td>
-	    </tr>
-	</table>
-	<table border = "1">
-	    <tr>
+
+    <h1> Prvi naslov </h1>
+    <h2> Drugi naslov </h1>
+    <h3> Treci naslov </h1>
+    <h4> Cetvrti naslov </h1>
+    <h5> Peti naslov </h1>
+    <h6> Sesti naslov </h1>
+
+    <p>
+        Tece i tece, tece jedan slap; <br>
+        Što u njem znaci moja mala kap?<br>
+
+        Gle, jedna duga u vodi se stvara, <br>
+        I sja i drsce u hiljadu sara. <br>
+
+        Taj san u slapu da bi mogo sjati, <br>
+        I moja kaplja pomaže ga tkati. <br>
+
+    </p>
+
+    <pre>
+        Vidi ti          to!
+        Tko bi rekao da ovo doista
+        radi!
+
+    </pre>
+
+    <ol>
+        <li> prvi element </li>
+        <li> drugi element </li>
+        <li> treci element </li>
+        <li> cetvrti element </li>
+        <li> peti element </li>
+
+    </ol>
+
+    <table border = "1">
+        <tr>
             <td>1</td>
             <td>2</td>
-	    <td rowspan=2>3</td>
-	    </tr>
-	    <tr>
-	        <td>4</td>
-	        <td>5</td>
-	    </tr>
-	</table
-		<table border = "1" cellpadding="10" cellspacing="0" width=50%>
-		<th colspan=2>Ime i prezime</th>
-		<th>Rođen</th>
-	    <tr>
-            	<td>Marko</td>
-            	<td>Zec</td>
-		<td>1981.</td></td>
-	    </tr>
-	    <tr>
-	        <td>Ivan</td>
-	        <td rowspan=2>Horvat</td>
-	        <td>1984.</td>
-	    </tr>
-	    <tr>
-		<td>Hrvoje</td>
-		<td>1970.</td>
-	    </tr>
-	</table>
-	<img src ="jabuka.jpg">
-	</img>
-	<img src ="krumpir.jpg">
-	</img>	
-	<img src ="kruška.jpg">
-	</img>	
-	<img src ="lopta.jpg">
-	</img>	
-	<img src ="skola.jpg">
-	</img>	
+            <td>3</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>5</td>
+            <td>6</td>
+        </tr>
+
+
+    </table>
+
+    <table border = "1">
+        <tr>
+            <td colspan=2>1</td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>5</td>
+            <td>6</td>
+        </tr>
+
+
+    </table>
+
+    <table border = "1">
+        <tr>
+            <td>1</td>
+            <td>2</td>
+            <td rowspan=2>3</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>5</td>
+        </tr>
+    </table>
+
+    <table border = "1" cellpadding="10" cellspacing="0" width=50% align=center>
+        <th colspan=2> Ime i prezime</th>
+        <th> Rođen</th>
+        <tr>
+            <td>Marko</td>
+            <td>Zec</td>
+            <td>1981.</td>
+        </tr>
+        <tr>
+            <td>Ivan</td>
+            <td rowspan=2>Horvat</td>
+            <td>1984.</td>
+        </tr>
+        <tr>
+            <td> Hrvoje</td>
+            <td>1970.</td>
+        </tr>
+
+
+    </table>
+
+    <img src=ovaslikanepostoji.jpg width =30% height=25% alt=OvaSlikaNePostoji usemap='#ime_mape' border=0>
+    </img>
+    <br>
+    <img src=jabuka.jpg width=12% height=25% alt=slikajabuke usemap='#ime_mape' border=0>
+    </img>
+    <br>
+    <img src=kruška.jpg width=25% height=50% alt=slikakruske usemap='#ime_mape' border=0>
+    </img>
+    <br>
+    <img src=skola.jpg width=50% height=10% alt=slikaskole usemap='#ime_mape' border=0>
+    </img>
+    <br>
+    <img src=krumpir.jpg width=10% height=50% alt=slikakrumpir usemap='#ime_mape' border=0>
+    </img>
+    <br>
+    <img src=lopta.jpg width=50% height=50% alt=slikatrave usemap='#ime_mape' border=0>
+    </img>
+    <br>
+
+    <a href="https://gimnazija-cakovec.hr/"> Ovo je stranica skole</a>
+    <br>
+    <a href="https://www.cert.hr/"> Stranica CERT-a </a>
+    <br>
+    <a href="o_meni.html">Stranica o meni</a>
+    <br>
+    <a href="kontakt.html">Kontakt</a>
+    <br>
+    <a href="https://www.youtube.com/watch?v=lIsTm0lGzY4">Kontakt</a>
+
+
+
+
+
 </html>
+
