--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
             Ovo je  <b> moj </b>  tekst. Ponekad je malo <i> ukošen </i> , a ponekad<b> podebljan</b> . Poželim li to, mogu ga, primjerice, uèinii istovremeno i <b> podebljanim</b> i <i> ukošenim </i>
             <map name='ime_mape'>
-	    <
+	    <a name="vrh">Homepage</a>
                 <area shape='rect' coords='0,0,100,100' href='adresa linka'>
                 <area shape='rect' coords='100,0,200,100' href='adresa linka'>
                 <area shape='rect' coords='0,100,100,200' href='adresa linka'>
@@ -146,9 +146,8 @@
     <br>
     <a href="https://www.youtube.com/watch?v=lIsTm0lGzY4">Kontakt</a>
 
+    <a href="#vrh">Povratak na vrh</a>
 
-
-
-
+    < a href="mailto:miljenko.blazeka@gmail.com">Pošalji mail profesoru</a>
 </html>
 
