--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
             Ovo je  <b> moj </b>  tekst. Ponekad je malo <i> ukošen </i> , a ponekad<b> podebljan</b> . Poželim li to, mogu ga, primjerice, uèinii istovremeno i <b> podebljanim</b> i <i> ukošenim </i>
             <map name='ime_mape'>
 	    <a name="vrh">Homepage</a>
-                <area shape='rect' coords='0,0,100,100' href='adresa linka'>
-                <area shape='rect' coords='100,0,200,100' href='adresa linka'>
-                <area shape='rect' coords='0,100,100,200' href='adresa linka'>
-                <area shape='rect' coords='100,100,200,200' href='adresa linka'>
-
+	    <map name="mapa">
+            <area shape='circle' coords="556 425 30" alt="wikiepdija--miš" href="https://hr.wikipedia.org/wiki/Ra%C4%8Dunalni_mi%C5%A1">
+	    <area shape="rect" coords="59 44 512 335" alt="wikipedija--monitor" href="https://hr.wikipedia.org/wiki/Ra%C4%8Dunalni_monitor">
+	    <area shape="poly" coords="78 409 478 406 490 442 64 442" alt="wikipedija--tipkovnica" href="https://hr.wikipedia.org/wiki/Tipkovnica"
 
             </map>
 
