--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 	    <area shape="poly" coords="27 143 20 161 215 156 210 138" alt="wikipedija--tipkovnica" href="https://hr.wikipedia.org/wiki/Tipkovnica"
 
             </map>
+	    <map>
+		     <area shape='circle' coords="40 60 30" alt="wikiepdija--george" href="https://en.wikipedia.org/wiki/George_Washington">
+		     <area shape='circle' coords="105 85 20" alt="wikiepdija--jefferson" href="https://en.wikipedia.org/wiki/Thomas_Jefferson">
+		     <area shape='circle' coords="156 128 15" alt="wikiepdija--roosevelt" href="https://en.wikipedia.org/wiki/Theodore_Roosevelt">
+		     <area shape='circle' coords="223 123 25" alt="wikiepdija--lincoln" href="https://en.wikipedia.org/wiki/Abraham_Lincoln">
+	    </map>
 
     </body>
 
