--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
             <title> Moja stranica </title>
 	    <meta charset="UTF-8">
+	    <link rel="stylesheet" type="text/css" href="gg.css"
     </head>
 
     <body>
